<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent"
    android:background="#f3f3f3"
    tools:context=".ui.produtos.Cadastro_Activity">

    <include
        android:id="@+id/menu"
        layout="@layout/menu_top" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_nome"
                style="@style/label"
                android:text="@string/input_nome"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <EditText
                android:textColorHint="#8a8a8a"
                android:id="@+id/input_nome"
                style="@style/input_padrao"
                android:hint="@string/hint_input_nome"
                app:layout_constraintTop_toBottomOf="@+id/txt_nome"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/txt_quantidade"
                style="@style/label"
                android:text="@string/input_quantidade"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_nome" />

            <EditText
                android:id="@+id/input_quantidade"
                style="@style/input_padrao"
                android:hint="@string/hint_input_quantidade"
                android:inputType="numberDecimal"
                android:text="@string/default_quantidade"
                app:layout_constraintTop_toBottomOf="@+id/txt_quantidade"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/txt_prioridade"
                style="@style/label"
                android:text="@string/input_prioridade"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_quantidade" />

            <Spinner
                android:id="@+id/input_spinner_prioridade"
                style="@style/input_spinner"
                app:layout_constraintTop_toBottomOf="@+id/txt_prioridade"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/txt_categoria"
                style="@style/label"
                android:text="@string/input_categoria"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_spinner_prioridade" />

            <Spinner
                android:id="@+id/input_spinner_categorias"
                style="@style/input_spinner"
                app:layout_constraintTop_toBottomOf="@+id/txt_categoria"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/txt_preco"
                style="@style/label"
                android:text="@string/input_preco"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_spinner_categorias" />


            <EditText
                android:id="@+id/input_preco"
                style="@style/input_padrao"
                android:inputType="numberDecimal"
                android:text="@string/default_preco"
                app:layout_constraintTop_toBottomOf="@+id/txt_preco"
                tools:ignore="MissingConstraints" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_cancelar"
                style="@style/btn_cancelar"
                android:text="@string/btn_cancelar"
                app:layout_constraintBottom_toBottomOf="@+id/btn_salva_item"
                app:layout_constraintRight_toLeftOf="@+id/btn_salva_item"
                app:layout_constraintTop_toTopOf="@+id/btn_salva_item" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_salva_item"
                style="@style/btn_padrao"
                android:text="@string/btn_salvar"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_preco" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>