<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_produto_home"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:layout_marginStart="30dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="30dp"
    android:layout_marginBottom="10dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/subcontainer_card_produto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f9f9f9">

        <LinearLayout
            android:id="@+id/simbolo_confirm_item"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"></LinearLayout>

        <TextView
            android:id="@+id/nome_produto"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="20dp"
            android:text="@string/label_nome"
            android:textColor="#283832"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/quantidade"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/quantidade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/label_quantidade"
            android:textColor="#283832"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/prioridade"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nome_produto" />

        <TextView
            android:id="@+id/prioridade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/label_prioridade"
            android:textColor="#283832"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/quantidade" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_excluir"
            style="@style/btn_excluir"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/btn_excluir"
            android:textColor="#fff"
            android:textSize="11sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_editar"
            app:layout_constraintRight_toRightOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_editar"
            style="@style/btn_editar"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/btn_editar"
            android:textColor="#fff"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>

